# Pdf-to-dataset

./: .gitignore  LICENSE  README.md  dataset.json  dataset_pretty.json  main.py  pdf_to_dataset.py  pyproject.toml  requirements.txt
